moved the dashboard icons to the right a bit. moved the fifth dashboard icons down and to the left and gave !important declaration to the heart icons so they would show up the appropriate color. added the text decoration none to the hover effect on the nav items and now added in line styles but changed those

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
   <div class="container">
 
     <!-- Beginning Navigation Bar -->
@@ -46,7 +45,7 @@
             <a href="#">overview</a>
           </li>
           <li id="navLinesLeft">
-            <a href="#">friends</a>
+            <a href="#" style="color: #373737;">friends</a>
           </li>
           <li id="navLinesLeft">
             <a href="#">your board</a>
@@ -177,7 +176,7 @@
       <nav class="postsNav">
         <ul>
           <div class="sectionLeftNav">
-            <li id="navLinesLeft"><a href="#">board</a></li>
+            <li id="navLinesLeft"><a href="#" style="color: #373737">board</a></li>
             <li id="navLinesLeft"><a href="#">following</a></li>
             <li id="navLinesLeft"><a href="#">guest book</a></li>
           </div>
