added class of active to the friends nav bar text and to the board nav bar text so that they are given the appropriate color as per the spec to simulate how they would look when user clicks on the nav text. also figured out how to manipulate the popover with .popover and giving a !important at the end of each declaration in order to move the popover down to where it should be according to the spec.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#">overview</a>
           </li>
           <li id="navLinesLeft">
-            <a href="#" style="color: #373737;">friends</a>
+            <a href="#" class="active">friends</a>
           </li>
           <li id="navLinesLeft">
             <a href="#">your board</a>
@@ -176,7 +176,7 @@
       <nav class="postsNav">
         <ul>
           <div class="sectionLeftNav">
-            <li id="navLinesLeft"><a href="#" style="color: #373737">board</a></li>
+            <li id="navLinesLeft"><a href="#" class="active">board</a></li>
             <li id="navLinesLeft"><a href="#">following</a></li>
             <li id="navLinesLeft"><a href="#">guest book</a></li>
           </div>
